syntax = "proto3";

package com.giyeok.passzero2.core;

option java_outer_classname = "StorageProto";

message Config {
  string default_directory = 1;
}

message DirectoryInfo {
  string id = 1;
  string name = 2;
}

message Entry {
  string directory = 1;
  string id = 2;
  EntryInfo info = 3;
}

message EntryInfo {
  string name = 1;
  EntryType type = 2;
}

enum EntryType {
  ENTRY_TYPE_UNSPECIFIED = 0;
  ENTRY_TYPE_LOGIN = 1;
  ENTRY_TYPE_NOTE = 2;
}

message EntryDetail {
  repeated EntryDetailItem items = 1;
}

message EntryDetailItem {
  EntryDetailItemType type = 1;
  string value = 2;
}

enum EntryDetailItemType {
  ENTRY_DETAIL_ITEM_UNKNOWN = 0;
  ENTRY_DETAIL_ITEM_USERNAME = 1;
  ENTRY_DETAIL_ITEM_PASSWORD = 2;
  ENTRY_DETAIL_ITEM_WEBSITE = 3;
  ENTRY_DETAIL_ITEM_NOTE = 4;
}

message EntryListCache {
  int64 version = 1;
  repeated Entry entries = 2;
}
